# dcpu

./: .gitmodules  Cargo.toml
assembler/: Cargo.toml  README.md  build.rs
assembler/check-assembler/: Cargo.toml  build.rs
assembler/check-assembler/src/: main.rs
assembler/generate-assembler-tests/: Cargo.toml
assembler/generate-assembler-tests/src/: main.rs
assembler/src/: lib.rs  main.rs
assembler/tests/: integration.rs
assembler/tests/cases/: fib.dasm16  interrupt.dasm16  literals.dasm16
assembler/tests/expected/: fib.dasm16  interrupt.dasm16  literals.dasm16
assembler/testutil/: Cargo.toml
assembler/testutil/src/: lib.rs
emulator/: Cargo.toml
emulator/src/: cpu.rs
emulator/src/cpu/: instruction.rs  ram.rs
integration_tester/: Cargo.toml
integration_tester/src/: lib.rs
src/: cpu.rs  main.rs
src/cpu/: instruction.rs  ram.rs
