[package]
name = "assembler"
version = "0.1.0"
authors = ["jumbatm <30644300+jumbatm@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emulator = { path = "../emulator" }
integration_tester = { path = "../integration_tester" }
structopt = "0.2.18"
